--- a/style.css
+++ b/style.css
@@ -38,7 +38,7 @@ Text Domain:  mx-child
 
 .grid-item {
     float: left;
-    margin-bottom: 20px;
+    margin-bottom: 50px;
 }
 /*.grid-item .iso-gallery-image{*/
     /*background-position: center center;*/
@@ -51,6 +51,34 @@ Text Domain:  mx-child
     width: 100%;
     padding-right: 20px;
 
+}
+#sub-filter-group{
+    text-align: center;
+    margin-bottom: 20px;
+}
+.elementor-sub-title{
+    position: relative;
+    display: inline-block;
+    margin: 0 2px;
+    background: #b8b8c3;
+    border-radius: 25px;
+    padding: 8px 30px;
+    z-index: 0;
+    cursor: pointer;
+}
+.elementor-sub-title > span:hover {
+    background: red;
+}
+.elementor-sub-title > span{
+    position: absolute;
+    width: 22px;
+    height: 22px;
+    font-size: 12px;
+    z-index: 99;
+    opacity: 1;
+    color: white;
+    right: 10px;
+    cursor: pointer;
 }
 
 .hero_img_btn{
